force-app/main/default/objects/SteelGradeAlias__mdt/SteelGradeAlias__mdt.object-meta.xml
<CustomObject>
    <label>SteelGradeAlias</label>
    <pluralLabel>SteelGradeAlias</pluralLabel>
</CustomObject>