force-app/main/default/objects/SteelGradeAlias__mdt/fields/CanonicalGrade__c.field-meta.xml
<CustomField xmlns='http://soap.sforce.com/2006/04/metadata'>
    <fullName>CanonicalGrade__c</fullName>
    <label>CanonicalGrade</label>
    <type>Text</type>
    <length>255</length>
</CustomField>