force-app/main/default/objects/SteelGradeAlias__mdt/fields/Domain__c.field-meta.xml
<CustomField xmlns='http://soap.sforce.com/2006/04/metadata'>
    <fullName>Domain__c</fullName>
    <label>Domain</label>
    <type>Text</type>
    <length>255</length>
</CustomField>