force-app/main/default/objects/SteelGradeAlias__mdt/fields/ERP_FacetGroup__c.field-meta.xml
<CustomField xmlns='http://soap.sforce.com/2006/04/metadata'>
    <fullName>ERP_FacetGroup__c</fullName>
    <label>ERP_FacetGroup</label>
    <type>Text</type>
    <length>255</length>
</CustomField>