force-app/main/default/objects/SteelGradeAlias__mdt/fields/IsActive__c.field-meta.xml
<CustomField xmlns='http://soap.sforce.com/2006/04/metadata'>
    <fullName>IsActive__c</fullName>
    <label>IsActive</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>