force-app/main/default/objects/SteelGradeAlias__mdt/fields/Priority__c.field-meta.xml
<CustomField xmlns='http://soap.sforce.com/2006/04/metadata'>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>