force-app/main/default/objects/SteelGradeAlias__mdt/fields/Regex__c.field-meta.xml
<CustomField xmlns='http://soap.sforce.com/2006/04/metadata'>
    <fullName>Regex__c</fullName>
    <label>Regex</label>
    <type>Text</type>
    <length>255</length>
</CustomField>