force-app/main/default/objects/SteelGradeAlias__mdt/fields/Script__c.field-meta.xml
<CustomField>
    <fullName>Script__c</fullName>
    <label>Script</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CYR</fullName>
                <default>true</default>
                <label>CYR</label>
            </value>
            <value>
                <fullName>LATIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>