force-app/main/default/objects/SteelGradeAlias__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BASE_GRADE</fullName>
                <default>true</default>
                <label>BASE_GRADE</label>
            </value>
            <value>
                <fullName>VARIANT</fullName>
            </value>
            <value>
                <fullName>EXTENSION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>